update to models

--- a/Hospital.Web/Hospital.Web.csproj
+++ b/Hospital.Web/Hospital.Web.csproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Hospital.Repositories\Hospital.Repositories.csproj" />
+	  <ProjectReference Include="..\Hospital.Services\Hospital.Services.csproj" />
 	  <ProjectReference Include="..\Hospital.Utilities\Hospital.Utilities.csproj" />
 	</ItemGroup>
 	<ItemGroup>
